[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/organization.gd" type="Script" id=1]
[ext_resource path="res://scripts/search_buttons.gd" type="Script" id=2]

[node name="organization" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="vbox" type="VBoxContainer" parent="margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hsep1" type="HSeparator" parent="margin/vbox"]
visible = false
margin_right = 1910.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="search_buttons" type="HFlowContainer" parent="margin/vbox"]
margin_right = 1910.0
margin_bottom = 86.0
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="vbox1" type="VBoxContainer" parent="margin/vbox/search_buttons"]
margin_right = 81.0
margin_bottom = 86.0
mouse_filter = 2
size_flags_vertical = 3

[node name="clear_all" type="Button" parent="margin/vbox/search_buttons/vbox1"]
margin_right = 81.0
margin_bottom = 62.0
size_flags_vertical = 3
text = "  Clear All  "

[node name="default" type="Button" parent="margin/vbox/search_buttons/vbox1"]
margin_top = 66.0
margin_right = 81.0
margin_bottom = 86.0
text = "  Default  "

[node name="vbox2" type="VBoxContainer" parent="margin/vbox/search_buttons"]
margin_left = 85.0
margin_right = 1798.0
margin_bottom = 86.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="include_all" type="LineEdit" parent="margin/vbox/search_buttons/vbox2"]
margin_right = 1713.0
margin_bottom = 26.0
clear_button_enabled = true
placeholder_text = "[Include All] of these comma-separated tags..."
caret_blink = true
caret_blink_speed = 0.5

[node name="include_any" type="LineEdit" parent="margin/vbox/search_buttons/vbox2"]
margin_top = 30.0
margin_right = 1713.0
margin_bottom = 56.0
clear_button_enabled = true
placeholder_text = "[Include Any] of these comma-separated tags..."
caret_blink = true
caret_blink_speed = 0.5

[node name="exclude_all" type="LineEdit" parent="margin/vbox/search_buttons/vbox2"]
margin_top = 60.0
margin_right = 1713.0
margin_bottom = 86.0
clear_button_enabled = true
placeholder_text = "[Exclude All] of these comma-separated tags..."
caret_blink = true
caret_blink_speed = 0.5

[node name="vbox3" type="VBoxContainer" parent="margin/vbox/search_buttons"]
margin_left = 1802.0
margin_right = 1910.0
margin_bottom = 86.0
mouse_filter = 2
size_flags_vertical = 3

[node name="search" type="Button" parent="margin/vbox/search_buttons/vbox3"]
margin_right = 108.0
margin_bottom = 68.0
size_flags_vertical = 3
text = "  Search  "

[node name="advanced_search" type="LinkButton" parent="margin/vbox/search_buttons/vbox3"]
margin_top = 72.0
margin_right = 108.0
margin_bottom = 86.0
focus_mode = 2
text = "Advanced Search"

[connection signal="text_changed" from="margin/vbox/search_buttons/vbox2/include_all" to="margin/vbox/search_buttons" method="_on_include_all_text_changed"]
[connection signal="text_entered" from="margin/vbox/search_buttons/vbox2/include_all" to="margin/vbox/search_buttons" method="_on_include_all_text_entered"]
[connection signal="text_changed" from="margin/vbox/search_buttons/vbox2/include_any" to="margin/vbox/search_buttons" method="_on_include_any_text_changed"]
[connection signal="text_entered" from="margin/vbox/search_buttons/vbox2/include_any" to="margin/vbox/search_buttons" method="_on_include_any_text_entered"]
[connection signal="text_changed" from="margin/vbox/search_buttons/vbox2/exclude_all" to="margin/vbox/search_buttons" method="_on_exclude_all_text_changed"]
[connection signal="text_entered" from="margin/vbox/search_buttons/vbox2/exclude_all" to="margin/vbox/search_buttons" method="_on_exclude_all_text_entered"]
